--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="top-banner flexible-area">
         <div class="helf-width">
             <h1>Welcome To</h1>
-            <h1><span class="orange">Mithun Biswas</span> World </h1>
+            <h1><span class="orange-color">Mithun Biswas</span> World </h1>
             <h3>Bulid Climber and Train Stopper</h3>
             <p>
                 You might saw me jumping, climbing buildings, and stopping trains. But nobody
@@ -44,22 +44,23 @@
     <section class="experiance-area">
         <h1>Experiances</h1>
         <div class="flexible-area">
-            <div class="helf-width">
+            <div class="experiance-item">
                 <h2>Full Stack Developer</h2>
-                <h3>2021-Present | Pro Level Developer</h3>
+                <h3 class="orange-color">2021-Present | Pro Level Developer</h3>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
                     efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
                     Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
             </div>
-            <div class="helf-width">
+            <div class="experiance-item baby-dev">
                 <h2>Baby Web Developer</h2>
-                <h3>2020-2021 | Programming Hero Learner</h3>
+                <h3 class="orange-color">2020-2021 | Programming Hero Learner</h3>
                 <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
                     showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
                 </p>
             </div>
         </div>
     </section>
+    <footer class="footer">© Peter Parker 2023, a Programming Hero initiative.</footer>
 </body>
 
 </html>
